keyboardnews.css
@charset "UTF-8";
body {
    font-family: 'Noto Sans JP', sans-serif;
    color: #707070;
    padding: 0;
    margin: 0;
}

p {
    font-size: 1.2em;
}

/* header */

header {
    position: relative;
    height: 56.2vw;
    background: url(images/header_bg.png) no-repeat;
    background-size: cover;
    background-position: center;
}

header .youtube-header {
    position: relative;
    overflow: hidden;
    top: -21.87vw;
    width: 100%;
    height: 78.12vw;
}

header iframe {
    position: absolute;
    min-width: 100vw;
    min-height: 100vw;
}

@media (max-width: 768px) {
    header iframe {
        visibility: hidden;
    }
}

header .header-cover {
    position: absolute;
    background-color: #000000aa;
    width: 100vw;
    height: 78.2vw;
}

header .header-text {
    position: absolute;
    text-align: center;
    line-height: 2.75em;
    left: 0;
    right: 0;
    top: 50%;
    transform: translate(0, 8vw);
    color: white;
    font-weight: 700;
}

@media (max-width: 768px) {
    header .header-text {
        transform: translate(0, 0);
    }
}

header .header-text p {
    font-size: 1.5em;
}

header .header-text h1 {
    font-size: 2.2em;
}

footer .logo-link {
    padding: 7%;
    text-align: center;
}

footer img {
    width: 30%;
}

/* section */

section {
    width: 100%;
    padding-top: 0.5px;
    padding-bottom: 0.5px;
}

/* section - image */

section .section-with-image {
    display: flex;
    flex-wrap: wrap;
    margin: 7%;
}

section .section-with-image .image {
    flex: 1 1 280px;
    padding: 0.5px;
}

section .section-with-image .image img {
    width: 100%;
    vertical-align: bottom;
}

section .section-with-image .description {
    flex: 1 1 320px;
    padding: 3% 5% 3% 5%;
}

section .section-with-image .description h1 {
    font-size: 2em;
    font-weight: 700;
    line-height: 1.4em;
    margin-bottom: 1em;
}

section .section-with-image .description p {
    font-weight: 400;
    line-height: 1.4em;
}

section .section-with-image-right {
    flex-direction: row-reverse;
}

/* section - youtube */

section .section-with-youtube {
    display: flex;
    flex-wrap: wrap;
    padding: 0 7% 7% 7%;
}

section .section-with-youtube .youtube-with-title {
    flex: 1 1 43%;
    min-width: 320px;
    padding: 2%;
}

section .section-with-youtube .youtube-with-title .youtube-wrapper {
    height: 21vw;
}

@media (max-width: 840px) {
    section .section-with-youtube .youtube-with-title .youtube-wrapper {
        height: 42vw;
    }
}

section .section-with-youtube .youtube-with-title iframe {
    width: 100%;
    height: 100%;
}

section .section-with-youtube .youtube-with-title h2 {
    font-size: 1.4em;
    color: #1EA4D9;
    margin: 1em 0 0.5em 0;
}

section .section-with-youtube .youtube-with-title p {
    margin-bottom: 1em;
}

/* section - links */

section .image-links {
    padding: 7%;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
}

section .image-links .image {
    flex: 0 1 180px;
}

section .image-links .image img {
    width: 100%;
    vertical-align: bottom;
}

/* section utils */

section .no-padding-top {
    padding-top: 0;
}

section .no-padding-bottom {
    padding-bottom: 0;
}

section .no-margin-top {
    margin-top: 0;
}

section .no-margin-bottom {
    margin-bottom: 0;
}

section .border-lined {
    border: 5px solid white;
}

/* introduction */

.introduction .description h1 {
    color: #1EA4D9;
}

/* member */

.member {
    background-color: #047BC4;
}

.member .section-with-image .image {
    flex: 1 0 240px;
    padding: 3%;
}

.member .section-with-image .description {
    flex: 3 0 360px;
}

.member .section-with-image .description {
    color: white;
}

.member .section-with-image .description h1 {
    font-size: 3em;
}

/* pickup */

.pickup {
    text-align: center;
}

.pickup .header {
    padding: 7% 7% 0 7%;
    margin-bottom: 3%;
}

.pickup h1 {
    color: #1EA4D9;
    font-size: 3em;
    margin-bottom: 1em;
}

/* links */

.links {
    background-color: #047BC4;
}

